--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -2,7 +2,7 @@
   "Email Archiving": "Email Archiving",
   "Email Plus": "Email Plus",
   "Estimated Total": "Estimated Total",
-  "Hosted Exchange mailboxes": "Hosted Exchange mailboxes",
+  "Hosted Exchange": "Hosted Exchange",
   "Microsoft Office seats": "Microsoft Office seats",
   "Next Step": "Next Step",
   "Per Month": "Per Month",
