--- a/src/locales/en-AU.json
+++ b/src/locales/en-AU.json
@@ -1,4 +1,6 @@
 {
+  "1TB of OneDrive file storage - access & share files anywhere": "",
+  "20% off Microsoft's Price": "",
   "Email Archiving": "Email Archiving",
   "Email Plus": "Email Plus",
   "Estimated Total": "Estimated Total",
@@ -9,5 +11,7 @@
   "Rackspace Email": "Rackspace Email",
   "disclaimer_1": "Your first 14 days are free! Charges will be assessed after that based on the number of provisioned products on your account at that time.           Rackspace Cloud Office requires a monthly minimum spend of $12.45. Prices exclude VAT, GST, or applicable taxes.",
   "disclaimer_2": "No long-term contracts. Cancel any time with one click.",
-  "disclaimer_3": "* Selecting Office automatically sets up your account to add Microsoft Office to any mailbox. You will be billed once Office is added in the Control Panel."
+  "disclaimer_3": "* Selecting Office automatically sets up your account to add Microsoft Office to any mailbox. You will be billed once Office is added in the Control Panel.",
+  "Microsoft Office": "",
+  "Auto-updating online and desktop versions of Word, Excel, PowerPoint, Outlook": ""
 }
